# walking_controller

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.alpine  Dockerfile.arch  Dockerfile.base-image-ubuntu  Dockerfile.ubuntu  PKGBUILD.mumps5  README.md  TODO.md  apply_force.py  controller  controller-workspace.code-workspace  controller.cpp  controller_log baseline.txt  controller_log baseline_timed.txt  csv_plot.py  eigen_test.cpp  example_t.hpp  example_t.zcm  expression_parser.py  leg_state.hpp  leg_state.zcm  model_functions.cpp  mpc_plots.py  nlp_test.cpp  parsed_expr.txt  raw_expr.txt  requirements.txt  run_controller  run_controller.py  setup.sh  symbol_replace.py  tmux-setup.sh  torque_setpoint.hpp  torque_setpoint.zcm  zcm_sample_test
.github/: test-action.yml
.github/workflows/: gazebo-stepping-in-place.yml  gazebo-walking.yml
casadi_config/: CMakeCache.txt
plot_data/: csv_plot.py  plot_mpc_log.m
ros/publisher-test/: run_rviz
ros/publisher-test/src/leg_joint_state_visualizer/: package.xml  setup.cfg  setup.py
ros/publisher-test/src/leg_joint_state_visualizer/launch/: demo.launch.py
ros/publisher-test/src/leg_joint_state_visualizer/leg_joint_state_visualizer/: state_publisher.py
ros/publisher-test/src/leg_joint_state_visualizer/urdf/: fixed-leg.rviz  fixed-leg.urdf.xml
ros/urdf/: fixed-leg.urdf
ros/urdf/launch/: display.launch.py
src/: CMakeLists.txt  CartesianTrajectory.cpp  ContactState.cpp  Helpers.cpp  Leg.cpp  PolyCoefficients4D.cpp  SimState.cpp  controller.cpp  eigen_test.cpp  header_test.cpp  model_functions.cpp  model_functions.hpp  mpc_benchmark.cpp  nlp_test.cpp  trajectory_test.cpp  zcm_sample_test.cpp
src/include/: CartesianTrajectory.hpp  ContactState.hpp  Helpers.hpp  Leg.hpp  PolyCoefficients4D.hpp  SimState.hpp  async_logger.hpp  leg_config actuators_modelled.hpp  leg_config.hpp  leg_config_actuators_modelled.hpp  log_type.hpp  model_functions.hpp  nameof.h
src/leg_model_functions/: C_matrix.hpp  a.out  header_test.out
src/udp_tests/: a.out  client  client.cpp  server.cpp
udp_tests/: server  thread_test  thread_test.cpp
utils/: apply_force.py  configure-odrive.py  csv_plot.py  expression_parser.py  mouse-position-publisher.py  mpc_plots.py  odrive-data-stream.py  plot_mpc_log.m  setup.sh  solver_time_tool.py  start_sim.py
utils/ci-tests/: check_energy_used.py  check_torso_height.py  check_torso_pos_x.py  check_torso_pos_y.py
